# tingwu

./: .envsample  .gitignore  Dockerfile  README.md  cert.pem  key.pem  load_env.ps1  noneed  pyproject.toml  requirements.txt  run-local.sh  s.yaml
src/: __init__.py  client.py  dlResult.py  format_transcription.py  main.py  result_processing.py  utils.py
src/api/: __init__.py  models.py
src/api/routes/: task.py  transcription.py
src/api/routes/transcription/: __init__.py  kintone.py  main.py  oss.py  processor.py
src/client/: __init__.py  base.py  result.py  task.py
src/commands/: __init__.py  create.py  process.py  version.py  wait.py
src/processors/: __init__.py  transcription.py
src/utils/: __init__.py  download.py  env.py  output.py
